sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value b
		b=true;
                ^AlgInsertionSort:10: error: not found: value b
		while (b) {
                       ^